queue routes and controller + counter controller
