# src/models/dao/counterDAO.ts
@@ -1,12 +1,12 @@
-import {Entity, ManyToMany, OneToMany, PrimaryColumn} from "typeorm";
+import {Entity, ManyToMany, OneToMany, PrimaryColumn, PrimaryGeneratedColumn} from "typeorm";
 import {ServiceDAO} from "@dao/serviceDAO";
 import {QueueDAO} from "@dao/queueDAO";
 
 @Entity("counter")
 export class CounterDAO {
 
-    @PrimaryColumn({nullable: false})
-    counter_code: string;
+    @PrimaryGeneratedColumn('increment', { type: 'int', unsigned: true })
+    id: number;
 
     @ManyToMany(
         () => ServiceDAO,
